--- a/2020_21/CAT/notes/notes.tex
+++ b/2020_21/CAT/notes/notes.tex
@@ -707,4 +707,141 @@
         \tilde F_{A,B}:\Hom(A,B)\mono \Hom(FA, FB)\hs\text{for all }A,B\in \cat C/\ker(F).
     \end{align*}
 \end{corollary}
+
+\section{Limits and colimits}
+
+\subsection{Subobjects}
+
+\begin{definition}[Awodey p. 89]
+    A \emph{subobject} of an object $X$ in a category $\cat C$ is 
+    a monomorphism $m:M\mono X$.
+\end{definition}
+
+\begin{corollary}
+    An equaliser of parallel arrows $f,g:A\to B$ is a subobject
+    of $A$ with the property
+    \begin{align*}
+        z\in_A E \hs\text{if and only if}\hs f(z) = g(z).
+    \end{align*}
+\end{corollary}
+
+\subsection{Pullbacks}
+
+\begin{definition}[Awodey p. 92]
+    If any category $\cat C$, given arrows $f,g$ with $\cod(f)=\cod(g)$, 
+    the \emph{pullback} of $f$ and $g$ consists of arrows such that $fp_1=gp_2$
+    and universal with this property. That is, given any $z_1:Z\to A$ and
+    $z_2:Z\to B$ with $fz_1=gz_2$, there exists a unique $u:Z\to P$ with
+    $z_1=p_1u$ and $z_2=p_2u$.
+    \begin{center}
+        \begin{tikzcd}
+            Z \arrow[ddr, swap, "z_1"] \arrow[dr, dotted, "u" description] \arrow[rrd, "z_2"]\\
+            & P \arrow[d, "p_1"] \arrow[r, swap, "p_2"]
+            & B \arrow[d, "g"]\\
+            & A \arrow[r, swap, "f"] & C
+        \end{tikzcd}
+    \end{center}
+\end{definition}
+
+\begin{proposition}[Awodey p. 93]
+    In a category with products and equalisers, given a corner of arrows
+    \begin{center}
+        \begin{tikzcd}
+            & B \arrow[d, "g"]\\
+            A \arrow[r, swap, "f"] & C
+        \end{tikzcd}
+    \end{center}
+    Consider the diagram
+    \begin{center}
+        \begin{tikzcd}
+            E \arrow[ddr, swap, "p_1"] \arrow[dr, "e" description] \arrow[rrd, "p_2"]\\
+            & A\times B \arrow[d, "\pi_1"] \arrow[r, swap, "\pi_2"]
+            & B \arrow[d, "g"]\\
+            & A \arrow[r, swap, "f"] & C
+        \end{tikzcd}
+    \end{center}
+    in which $e$ is an equaliser of $f\pi_1$ and $g\pi_2$ and $p_1=\pi_1 e$, $p2=\pi_2 e$. Then,
+    $E$, $p_1$, $p_2$ is a pullback of $f$ and $g$. Conversely, if $E$, $p_1$, $p_2$ are given as
+    such a pullback, then the arrow
+    \begin{align*}
+        e=\lra{p_1,p_2}:E\to A\times B
+    \end{align*}
+    is an equaliser of $f\pi_1$ and $g\pi_2$.
+\end{proposition}
+
+\begin{corollary}[Awodey p. 94]
+    If a category $\cat C$ has binary products and equalisers, then it has pullbacks.
+\end{corollary}
+
+\begin{lemma}[Awodey p. 95]
+    Consider the commutative diagram below in a category with pullbacks:
+    \begin{center}
+        \begin{tikzcd}
+            F \arrow[d, swap, "h''"] \arrow[r, "f'"] &
+            E \arrow[d, "h'"] \arrow[r, "g'"] &
+            D \arrow[d, "h"] \\
+            A \arrow[r, swap, "f"] &
+            B \arrow[r, swap, "g"] &
+            C
+        \end{tikzcd}
+    \end{center} 
+    \begin{enumerate}
+        \item If the two squares are pullbacks, so is the outer rectangle. Thus, \begin{align*}
+            A\times_B (B\times_C D) \cong A\times_C D.
+        \end{align*}
+        \item If the right square and the outer rectangle are pullbacks, so is the left square.
+    \end{enumerate}
+\end{lemma}
+
+\begin{corollary}[Awodey p. 96]
+    The pullback of a commutative triangle is a commutative triangle.
+
+    \begin{center}
+        \begin{tikzcd}
+            A'\arrow[dd, "\alpha'"] \arrow[dr, dotted, "\gamma'"] \arrow[rrr, "h_\alpha"] &&&
+            A \arrow[dd, "\alpha"] \arrow[dr, "\gamma"] \\ &
+            B' \arrow[rrr, "h_\beta"] \arrow[dl, "\beta'"] &&&
+            B \arrow[dl, "\beta"]\\
+            C' \arrow[rrr, "h"] &&&
+            C
+        \end{tikzcd}
+    \end{center}
+\end{corollary}
+
+\begin{proposition}
+    Pullback is a functor. That is, for fixed $h:C'\to C$ in a category $\cat C$ with pullbacks,
+    there is a functor
+    \begin{align*}
+        h^*:\cat C/C \to \cat C/C'
+    \end{align*}
+    defined by
+    \begin{align*}
+        (A\to_\alpha C)\mapsto (C'\times_C A\to_{\alpha'}C')
+    \end{align*}
+    where $\alpha'$ is the pullback of $\alpha$ along $h$.
+\end{proposition}
+
+\begin{corollary}[Awodey p. 97]
+    Let $\cat C$ be a category with pullbacks. For any arrow $f:A\to B$
+    in $\cat C$, we have the following diagram of categories and functors:
+    \begin{center}
+        \begin{tikzcd}
+            \Sub(A) \arrow[d] &
+            \Sub(B) \arrow[l, swap, "\inv f"] \arrow[d] \\
+            \cat C / A &
+            \cat C / B \arrow[l, "f^*"]
+        \end{tikzcd}
+    \end{center}
+    where for any $m$ and its pullback $m'$ along $f$ we define
+    the map
+    \begin{align*}
+        \inv f: \Sub(B)&\to\Sub(A),\\
+        m &\mapsto m'.
+    \end{align*}
+\end{corollary}
+
+\begin{proposition}
+    A category has finite products and equalisers iff it has pullbacks and a
+    terminal object.
+\end{proposition} 
 \end{document}
